<resources>
    <string name="interstial_ad_unit_id">ca-app-pub-2167493564469787/6369516555</string>
    <string name="banner_ad_unit_id">ca-app-pub-2167493564469787/1916284152</string>

    <string name="app_name">Small Picture</string>
    <string name="galeria">Gallery</string>
    <string name="camera">Camera</string>
    <string name="reduzir_l">Reduce:</string>
    <string name="qualidade_l">Quality:</string>
    <string name="formato_l">Format:</string>
    <string name="selecione_fotos">Select one or more photos!</string>
    <string name="compartilhar_com">Share images to..</string>
    <string name="configuracoes_saida">Output Settings</string>
    <string name="salvar">Save</string>
    <string name="cancelar">Cancel</string>
    <string name="reduzindo_imagens">Reducing image size...</string>
    <string name="quantidade_fotos_selecao">%1$d  Selected</string>
    <string name="buscando_imagens">Searching for selected images...</string>
    <string name="erro_memoria">Error while executing action! Select a higher rate of reduction!</string>
    <string name="fotos_reduzidas">The pictures have been reduced!</string>

    <string name="imagem">Image %1$d</string>
    <string name="menu_reduzir_imagens">Reduce images</string>
    <string name="menu_configuracoes_imagens">Settings</string>
    <string name="menu_remover_anuncios">Remove ads</string>
    <string name="menu_compartilhar">Share</string>
    <string name="menu_remover_lista">Clear</string>
    <string name="menu_avaliar_app">Rate App</string>
    <string name="reduzir">Reduce</string>
</resources>
