<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:fab="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_weight="0.75"
            android:id="@+id/activity_lista_fotos"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="br.com.sm.smallpicture.ListaFotosActivity">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/recyclerView"/>

            <com.github.clans.fab.FloatingActionMenu
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="45dp"
                fab:menu_icon="@drawable/icon_add"
                fab:menu_animationDelayPerItem="0"
                fab:menu_colorNormal="@color/indigo"
                fab:menu_colorPressed="@color/indigo_pressed">

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_photo_white_24dp"
                    fab:fab_label="@string/galeria"
                    fab:fab_size="mini"
                    fab:fab_colorNormal="@color/teal"
                    fab:fab_colorPressed="@color/teal_pressed"
                    android:onClick="clickAbrirFotos"/>

                <com.github.clans.fab.FloatingActionButton
                    android:id="@+id/fab2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_camera_alt_white_24dp"
                    fab:fab_label="@string/camera"
                    fab:fab_size="mini"
                    fab:fab_colorNormal="@color/teal"
                    fab:fab_colorPressed="@color/teal_pressed"
                    android:onClick="clickCamera"/>

            </com.github.clans.fab.FloatingActionMenu>

        </FrameLayout>

        <com.google.android.gms.ads.AdView
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            ads:adSize="BANNER"
            ads:adUnitId="@string/banner_ad_unit_id">
        </com.google.android.gms.ads.AdView>

    </RelativeLayout>

</layout>


