<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TableLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:collapseColumns="3">

        <TableRow
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/qualidade_l"
                android:textSize="16sp"/>

            <SeekBar
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/sbQualidade" />

            <TextView
                android:layout_weight="0.5"
                android:id="@+id/txtBarraQualidade"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:gravity="center">
            <TextView
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/reduzir_l"
                android:textSize="16sp"/>

            <SeekBar
                android:layout_weight="2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/sbReduzir" />

            <TextView
                android:layout_weight="0.5"
                android:id="@+id/txtBarraReduzir"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="16sp"/>
        </TableRow>

        <TableRow
            android:layout_marginTop="10dp"
            android:gravity="center">

            <TextView
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/formato_l"
                android:id="@+id/textView2"
                android:textSize="16sp"/>

            <RadioGroup
                android:layout_weight="2.1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rbJPEG"
                    android:checked="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="JPEG"/>

                <RadioButton
                    android:id="@+id/rbWEBP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="PNG"/>
            </RadioGroup>

            <View
                android:layout_weight="0.4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/view"></View>
        </TableRow>
    </TableLayout>
</layout>

